--- a/whois.sh.env
+++ b/whois.sh.env
@@ -1,2 +1,2 @@
-export WHOIS_WORKING_DIR="/root/.whois.sh"
-alias whois.sh="/root/.whois.sh/whois.sh"
+export WHOIS_WORKING_DIR="$HOME/.whois.sh"
+alias whois.sh="~/.whois.sh/whois.sh"
